D001/100 init