@@ -1,1 +1,19 @@
 # sound-analyzer
+Virtual audio analyzer for analyzing audio files previously stored in a WAVE file.
+
+# tech
+java 21 
+javaFX - https://jdk.java.net/javafx21/ 
+maven
+
+# run
+VM options --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml
+
+# MVP
+sound level meter
+
+
+
+
+
+
